# wickra-exchange

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  release.yml  testnet.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_exchange.h
bindings/c/src/: lib.rs
bindings/csharp/: README.md
bindings/csharp/WickraExchange/: Derivatives.cs  Exchange.cs  Native.cs  README.md  WickraExchange.csproj
bindings/csharp/WickraExchange.Tests/: DerivativesTests.cs  ExchangeTests.cs  WickraExchange.Tests.csproj
bindings/go/: derivatives_test.go  exchange_test.go  go.mod  wickra.go
bindings/go/include/: wickra_exchange.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/exchange/: AdvancedOrders.java  Derivatives.java  Exchange.java  Native.java  UserData.java  WsExecution.java
bindings/java/src/test/java/org/wickra/exchange/: DerivativesTest.java  ExchangeTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  derivatives.test.js  exchange.test.js  market-data.test.js  replay.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_exchange/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_derivatives.py  test_market_data.py  test_replay.py  test_smoke.py  test_ws_streams.py
bindings/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: exchange.R
bindings/r/src/: Makevars  Makevars.win  wickra_exchange.c
bindings/r/tests/: run_tests.R
crates/wickra-exchange/: Cargo.toml
crates/wickra-exchange-bench/: Cargo.toml
crates/wickra-exchange-bench/benches/: throughput.rs
crates/wickra-exchange-core/: Cargo.toml
crates/wickra-exchange-core/src/: clock.rs  credentials.rs  deadman.rs  error.rs  events.rs  feeds.rs  idempotency.rs  instruments.rs  lib.rs  normalize.rs  observability.rs  options.rs  orderbook.rs  positions.rs  ratelimiter.rs  reconcile.rs  retry.rs  signing.rs  symbol.rs  traits.rs  transport.rs  types.rs  wsutil.rs
crates/wickra-exchange-core/src/exchanges/: binance.rs  bitget.rs  bybit.rs  coinbase.rs  gate.rs  htx.rs  kraken.rs  kucoin.rs  mod.rs  okx.rs  paper.rs  replay.rs  upbit.rs
crates/wickra-exchange-core/tests/: conformance.rs  golden.rs  proptest_invariants.rs
crates/wickra-exchange/src/: factory.rs  lib.rs  net.rs
docs/: ARCHITECTURE.md  AUTH.md  CAPABILITIES.md  Cookbook.md  DERIVATIVES.md  EXCHANGES.md  STREAMING.md  ccxt-migration.md
examples/: README.md
examples/c/: CMakeLists.txt  paper.cpp  replay.c
examples/csharp/: PaperTrade.csproj  Program.cs
examples/go/: paper_trade.go
examples/java/: PaperTrade.java
examples/node/: paper_trade.js
examples/python/: paper_trade.py
examples/r/: paper_trade.R
examples/rust/: Cargo.toml
examples/rust/src/: paper_trade.rs  ticker.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: credentials_parse.rs  filter_round.rs  orderbook_diff.rs  response_parse.rs  ws_frame.rs
golden/: README.md
golden/expected/: sma_cross.json  sma_cross_with_costs.json
golden/replay/: sma_cross.json  sma_cross_with_costs.json
