[package]
name = "wickra-exchange-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
rust_decimal = "1"
arbitrary = { version = "1", features = ["derive"] }
wickra-exchange-core = { path = "../crates/wickra-exchange-core" }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "response_parse"
path = "fuzz_targets/response_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "credentials_parse"
path = "fuzz_targets/credentials_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "filter_round"
path = "fuzz_targets/filter_round.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ws_frame"
path = "fuzz_targets/ws_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "orderbook_diff"
path = "fuzz_targets/orderbook_diff.rs"
test = false
doc = false
bench = false
