[package]
name = "wickra-exchange-c"
description = "C ABI (cdylib + staticlib) for wickra-exchange — the hub every C-capable language (C, C++, C#, Go, Java, R) links against."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "wickra_exchange"
crate-type = ["cdylib", "staticlib"]

# The C ABI inherently needs `unsafe` (raw pointers across the FFI boundary). The
# workspace lints do not forbid unsafe here; this crate is the one place the
# boundary lives. Mirrors the workspace clippy set.
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
# FFI byte -> c_char (i8 on some targets) is intentional and lossless for ASCII.
cast_possible_wrap = "allow"
similar_names = "allow"
float_cmp = "allow"

[dependencies]
wickra-exchange = { workspace = true }
rust_decimal = { workspace = true }
