[package]
name = "wickra-exchange-node"
description = "Node.js bindings for wickra-exchange: streaming-native, unified connectivity for the ten largest crypto exchanges."
version.workspace = true
authors.workspace = true
edition.workspace = true
# napi-build requires Rust >= 1.88 (newer than the workspace 1.86 minimum).
rust-version = "1.88"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

# Mirrors [workspace.lints] EXCEPT `unsafe_code`, relaxed from the workspace
# `forbid` to `deny`: the napi-rs derive macros emit `#[allow(unsafe_code)]`,
# which `forbid` cannot permit. `deny` still fails on any unguarded unsafe in
# our own code.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
float_cmp = "allow"

[dependencies]
wickra-exchange = { workspace = true }
rust_decimal = { workspace = true }
napi = { version = "3.9", features = ["napi8"] }
napi-derive = "3.5"

[build-dependencies]
napi-build = "2"
