[package]
name = "wickra-exchange-python"
description = "Python bindings for wickra-exchange: streaming-native, unified connectivity for the ten largest crypto exchanges."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_exchange"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
wickra-exchange = { workspace = true }
rust_decimal = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
