[package]
name = "wickra-exchange-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits, types and shared connectivity machinery for wickra-exchange: a typed, unified API over the ten largest crypto exchanges."

[dependencies]
wickra-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
zeroize = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rust_decimal_macros = { workspace = true }

[lints]
workspace = true
