[package]
name = "wickra-exchange-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits, types and shared connectivity machinery for wickra-exchange: a typed, unified API over the ten largest crypto exchanges."

[dependencies]
wickra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
zeroize = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
# ECDSA P-256 (ES256) for Coinbase's per-request JWT. RustCrypto ECDSA uses
# deterministic RFC-6979 nonces, so signatures are reproducible under test.
p256 = { version = "0.14", features = ["ecdsa", "pkcs8", "pem"] }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
